--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':base_protocol', ':base_protocol_annotation', ':base_protocol_compile'
+include ':app', ':base_protocol', ':base_protocol_annotation', ':base_protocol_compile', ':lib'
